--- a/src/css/default-skin/default-skin.scss
+++ b/src/css/default-skin/default-skin.scss
@@ -110,6 +110,15 @@
   background-position: -177px 0;
 }
 
+.pswp__button--rotate.pswp__button--rotate-prev {
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+	filter: FlipH;
+	-ms-filter: "FlipH";
+}
+
 .pswp--supports-fs .pswp__button--fs {
 	display: block;
 }
